crates/languages/bevy_mod_scripting_lua_derive/tests/fail/simple/function-with-receiver.stderr
error: Lua proxy functions of type: Function, do not expect a receiver argument
 --> tests/fail/simple/function-with-receiver.rs:8:33
  |
8 |     fn fn_returning_some_string(self) {
  |                                 ^^^^

error: Lua proxy functions of type: Function, do not expect a receiver argument
  --> tests/fail/simple/function-with-receiver.rs:13:27
   |
13 |     fn fn_returning_proxy(&self) {
   |                           ^^^^^
